wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLessParser.java
// $ANTLR 3.1.3 Mar 17, 2009 19:23:44 /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g 2013-03-11 18:55:31
/**
 * This file is part of the Joana IFC project. It is developed at the
 * Programming Paradigms Group of the Karlsruhe Institute of Technology.
 *
 * For further details on licensing please read the information at
 * http://joana.ipd.kit.edu or contact the authors.
 */
package edu.kit.joana.wala.flowless.spec;

import edu.kit.joana.wala.flowless.spec.ast.Parameter;
import edu.kit.joana.wala.flowless.spec.ast.ParameterOptList;
import edu.kit.joana.wala.flowless.spec.ast.SimpleParameter;
import edu.kit.joana.wala.flowless.spec.ast.FlowStmt;
import edu.kit.joana.wala.flowless.spec.ast.ExplicitFlowStmt;
import edu.kit.joana.wala.flowless.spec.ast.PureStmt;
import edu.kit.joana.wala.flowless.spec.ast.AliasStmt;
import edu.kit.joana.wala.flowless.spec.ast.PrimitiveAliasStmt;
import edu.kit.joana.wala.flowless.spec.ast.InferableAliasStmt;
import edu.kit.joana.wala.flowless.spec.ast.UniqueStmt;
import edu.kit.joana.wala.flowless.spec.ast.BooleanAliasStmt;
import edu.kit.joana.wala.flowless.spec.ast.IFCStmt;
import java.util.LinkedList;
import java.util.List;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

/**
 * This file is part of the Joana IFC project. It is developed at the
 * Programming Paradigms Group of the Karlsruhe Institute of Technology.
 *
 * For further details on licensing please read the information at
 * http://joana.ipd.kit.edu or contact the authors.
 */
public class FlowLessParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "IMPLIES", "ALIAS_OR", "ALIAS_AND", "ALIAS_NOT", "ARROW", "NOT_ARROW", "WILDCARD", "RESULT", "EXC", "STATE", "IDENT", "ARRAY", "WS_", "'?'", "'alias'", "'('", "')'", "'{'", "'}'", "'unique'", "'1'", "'uniq'", "','", "'pure'", "'.'", "'['", "']'"
    };
    public static final int STATE=13;
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int IMPLIES=4;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int ALIAS_AND=6;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int NOT_ARROW=9;
    public static final int RESULT=11;
    public static final int EOF=-1;
    public static final int ALIAS_NOT=7;
    public static final int ALIAS_OR=5;
    public static final int T__19=19;
    public static final int T__30=30;
    public static final int WS_=16;
    public static final int EXC=12;
    public static final int T__18=18;
    public static final int T__17=17;
    public static final int WILDCARD=10;
    public static final int IDENT=14;
    public static final int ARROW=8;
    public static final int ARRAY=15;

    // delegates
    // delegators


        public FlowLessParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public FlowLessParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return FlowLessParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g"; }


      @Override
      public void reportError(RecognitionException e) {
      	super.reportError(e);
        Thrower.sneakyThrow(e);
      }

      /**
       * See "Puzzle 43: Exceptionally Unsafe" from Bloch Gafter, <i>Java Puzzlers</i>. Addison Wesley 2005.
       */
      static class Thrower {
        private static Throwable t;
        private Thrower() throws Throwable {
          throw t;
        }
        public static synchronized void sneakyThrow(Throwable t) {
          Thrower.t = t;
          try {
            Thrower.class.newInstance();
          } catch (InstantiationException e) {
            throw new IllegalArgumentException(e);
          } catch (IllegalAccessException e) {
            throw new IllegalArgumentException(e);
          } finally {
            Thrower.t = null; // Avoid memory leak
          }
        }
      }




    // $ANTLR start "ifc_stmt"
    // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:116:1: ifc_stmt returns [IFCStmt ifc] : (a= alias_stmts ( IMPLIES f= flow_stmts )? | IMPLIES f= flow_stmts | '?' IMPLIES f= flow_stmts );
    public final IFCStmt ifc_stmt() throws RecognitionException {
        IFCStmt ifc = null;

        AliasStmt a = null;

        List<FlowStmt> f = null;


        try {
            // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:117:2: (a= alias_stmts ( IMPLIES f= flow_stmts )? | IMPLIES f= flow_stmts | '?' IMPLIES f= flow_stmts )
            int alt2=3;
            switch ( input.LA(1) ) {
            case ALIAS_NOT:
            case 18:
            case 19:
            case 21:
            case 23:
            case 24:
            case 25:
                {
                alt2=1;
                }
                break;
            case IMPLIES:
                {
                alt2=2;
                }
                break;
            case 17:
                {
                alt2=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:117:4: a= alias_stmts ( IMPLIES f= flow_stmts )?
                    {
                    pushFollow(FOLLOW_alias_stmts_in_ifc_stmt65);
                    a=alias_stmts();

                    state._fsp--;

                    // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:117:18: ( IMPLIES f= flow_stmts )?
                    int alt1=2;
                    int LA1_0 = input.LA(1);

                    if ( (LA1_0==IMPLIES) ) {
                        alt1=1;
                    }
                    switch (alt1) {
                        case 1 :
                            // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:117:19: IMPLIES f= flow_stmts
                            {
                            match(input,IMPLIES,FOLLOW_IMPLIES_in_ifc_stmt68); 
                            pushFollow(FOLLOW_flow_stmts_in_ifc_stmt72);
                            f=flow_stmts();

                            state._fsp--;


                            }
                            break;

                    }

                     ifc = new IFCStmt(a, f); 

                    }
                    break;
                case 2 :
                    // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:118:5: IMPLIES f= flow_stmts
                    {
                    match(input,IMPLIES,FOLLOW_IMPLIES_in_ifc_stmt82); 
                    pushFollow(FOLLOW_flow_stmts_in_ifc_stmt86);
                    f=flow_stmts();

                    state._fsp--;

                     ifc = new IFCStmt(null, f); 

                    }
                    break;
                case 3 :
                    // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:119:5: '?' IMPLIES f= flow_stmts
                    {
                    match(input,17,FOLLOW_17_in_ifc_stmt94); 
                    match(input,IMPLIES,FOLLOW_IMPLIES_in_ifc_stmt96); 
                    pushFollow(FOLLOW_flow_stmts_in_ifc_stmt100);
                    f=flow_stmts();

                    state._fsp--;

                     ifc = new IFCStmt(InferableAliasStmt.getInstance(), f); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ifc;
    }
    // $ANTLR end "ifc_stmt"


    // $ANTLR start "alias_stmts"
    // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:122:1: alias_stmts returns [AliasStmt alias] : a= alias_or ;
    public final AliasStmt alias_stmts() throws RecognitionException {
        AliasStmt alias = null;

        AliasStmt a = null;


        try {
            // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:123:2: (a= alias_or )
            // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:123:4: a= alias_or
            {
            pushFollow(FOLLOW_alias_or_in_alias_stmts119);
            a=alias_or();

            state._fsp--;

             alias = a; 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return alias;
    }
    // $ANTLR end "alias_stmts"


    // $ANTLR start "alias_or"
    // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:126:1: alias_or returns [AliasStmt alias] : a= alias_and ( ALIAS_OR b= alias_or )? ;
    public final AliasStmt alias_or() throws RecognitionException {
        AliasStmt alias = null;

        AliasStmt a = null;

        AliasStmt b = null;


        try {
            // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:127:2: (a= alias_and ( ALIAS_OR b= alias_or )? )
            // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:127:4: a= alias_and ( ALIAS_OR b= alias_or )?
            {
            pushFollow(FOLLOW_alias_and_in_alias_or138);
            a=alias_and();

            state._fsp--;

             alias = a; 
            // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:127:31: ( ALIAS_OR b= alias_or )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==ALIAS_OR) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:127:32: ALIAS_OR b= alias_or
                    {
                    match(input,ALIAS_OR,FOLLOW_ALIAS_OR_in_alias_or143); 
                    pushFollow(FOLLOW_alias_or_in_alias_or147);
                    b=alias_or();

                    state._fsp--;

                     alias = new BooleanAliasStmt(alias, b, BooleanAliasStmt.Operator.OR); 

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return alias;
    }
    // $ANTLR end "alias_or"


    // $ANTLR start "alias_and"
    // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:130:1: alias_and returns [AliasStmt alias] : a= alias_stmt ( ALIAS_AND b= alias_and )? ;
    public final AliasStmt alias_and() throws RecognitionException {
        AliasStmt alias = null;

        AliasStmt a = null;

        AliasStmt b = null;


        try {
            // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:131:2: (a= alias_stmt ( ALIAS_AND b= alias_and )? )
            // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:131:4: a= alias_stmt ( ALIAS_AND b= alias_and )?
            {
            pushFollow(FOLLOW_alias_stmt_in_alias_and168);
            a=alias_stmt();

            state._fsp--;

             alias = a; 
            // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:131:32: ( ALIAS_AND b= alias_and )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==ALIAS_AND) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:131:33: ALIAS_AND b= alias_and
                    {
                    match(input,ALIAS_AND,FOLLOW_ALIAS_AND_in_alias_and173); 
                    pushFollow(FOLLOW_alias_and_in_alias_and177);
                    b=alias_and();

                    state._fsp--;

                     alias = new BooleanAliasStmt(alias, b, BooleanAliasStmt.Operator.AND); 

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return alias;
    }
    // $ANTLR end "alias_and"


    // $ANTLR start "alias_stmt"
    // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:134:1: alias_stmt returns [AliasStmt alias] : ( ( ALIAS_NOT )? 'alias' '(' p= params ')' | ( ALIAS_NOT )? '{' p= params '}' | ( 'unique' | '1' | 'uniq' ) '(' p= params ')' | '(' a= alias_stmts ')' );
    public final AliasStmt alias_stmt() throws RecognitionException {
        AliasStmt alias = null;

        List<Parameter> p = null;

        AliasStmt a = null;


        try {
            // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:135:2: ( ( ALIAS_NOT )? 'alias' '(' p= params ')' | ( ALIAS_NOT )? '{' p= params '}' | ( 'unique' | '1' | 'uniq' ) '(' p= params ')' | '(' a= alias_stmts ')' )
            int alt7=4;
            switch ( input.LA(1) ) {
            case ALIAS_NOT:
                {
                int LA7_1 = input.LA(2);

                if ( (LA7_1==21) ) {
                    alt7=2;
                }
                else if ( (LA7_1==18) ) {
                    alt7=1;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 7, 1, input);

                    throw nvae;
                }
                }
                break;
            case 18:
                {
                alt7=1;
                }
                break;
            case 21:
                {
                alt7=2;
                }
                break;
            case 23:
            case 24:
            case 25:
                {
                alt7=3;
                }
                break;
            case 19:
                {
                alt7=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }

            switch (alt7) {
                case 1 :
                    // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:135:4: ( ALIAS_NOT )? 'alias' '(' p= params ')'
                    {
                     boolean negated = false; 
                    // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:135:33: ( ALIAS_NOT )?
                    int alt5=2;
                    int LA5_0 = input.LA(1);

                    if ( (LA5_0==ALIAS_NOT) ) {
                        alt5=1;
                    }
                    switch (alt5) {
                        case 1 :
                            // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:135:34: ALIAS_NOT
                            {
                            match(input,ALIAS_NOT,FOLLOW_ALIAS_NOT_in_alias_stmt199); 
                             negated = true; 

                            }
                            break;

                    }

                    match(input,18,FOLLOW_18_in_alias_stmt205); 
                    match(input,19,FOLLOW_19_in_alias_stmt207); 
                    pushFollow(FOLLOW_params_in_alias_stmt211);
                    p=params();

                    state._fsp--;

                    match(input,20,FOLLOW_20_in_alias_stmt213); 
                     alias = new PrimitiveAliasStmt(p, negated); 

                    }
                    break;
                case 2 :
                    // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:136:4: ( ALIAS_NOT )? '{' p= params '}'
                    {
                     boolean negated = false; 
                    // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:136:33: ( ALIAS_NOT )?
                    int alt6=2;
                    int LA6_0 = input.LA(1);

                    if ( (LA6_0==ALIAS_NOT) ) {
                        alt6=1;
                    }
                    switch (alt6) {
                        case 1 :
                            // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:136:34: ALIAS_NOT
                            {
                            match(input,ALIAS_NOT,FOLLOW_ALIAS_NOT_in_alias_stmt223); 
                             negated = true; 

                            }
                            break;

                    }

                    match(input,21,FOLLOW_21_in_alias_stmt229); 
                    pushFollow(FOLLOW_params_in_alias_stmt233);
                    p=params();

                    state._fsp--;

                    match(input,22,FOLLOW_22_in_alias_stmt235); 
                     alias = new PrimitiveAliasStmt(p, negated); 

                    }
                    break;
                case 3 :
                    // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:137:4: ( 'unique' | '1' | 'uniq' ) '(' p= params ')'
                    {
                    if ( (input.LA(1)>=23 && input.LA(1)<=25) ) {
                        input.consume();
                        state.errorRecovery=false;
                    }
                    else {
                        MismatchedSetException mse = new MismatchedSetException(null,input);
                        throw mse;
                    }

                    match(input,19,FOLLOW_19_in_alias_stmt255); 
                    pushFollow(FOLLOW_params_in_alias_stmt259);
                    p=params();

                    state._fsp--;

                    match(input,20,FOLLOW_20_in_alias_stmt261); 
                     alias = new UniqueStmt(p); 

                    }
                    break;
                case 4 :
                    // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:138:4: '(' a= alias_stmts ')'
                    {
                    match(input,19,FOLLOW_19_in_alias_stmt268); 
                    pushFollow(FOLLOW_alias_stmts_in_alias_stmt272);
                    a=alias_stmts();

                    state._fsp--;

                    match(input,20,FOLLOW_20_in_alias_stmt274); 
                     alias = a; 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return alias;
    }
    // $ANTLR end "alias_stmt"


    // $ANTLR start "flow_stmts"
    // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:141:1: flow_stmts returns [List<FlowStmt> flowList] : f= flow_not_list ( ',' fl= flow_not_list )* ;
    public final List<FlowStmt> flow_stmts() throws RecognitionException {
        List<FlowStmt> flowList = null;

        List<FlowStmt> f = null;

        List<FlowStmt> fl = null;


        try {
            // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:142:2: (f= flow_not_list ( ',' fl= flow_not_list )* )
            // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:142:4: f= flow_not_list ( ',' fl= flow_not_list )*
            {
             flowList = new LinkedList<FlowStmt>(); 
            pushFollow(FOLLOW_flow_not_list_in_flow_stmts295);
            f=flow_not_list();

            state._fsp--;

             flowList.addAll(f); 
            // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:142:87: ( ',' fl= flow_not_list )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==26) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:142:88: ',' fl= flow_not_list
            	    {
            	    match(input,26,FOLLOW_26_in_flow_stmts300); 
            	    pushFollow(FOLLOW_flow_not_list_in_flow_stmts304);
            	    fl=flow_not_list();

            	    state._fsp--;

            	     flowList.addAll(fl); 

            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return flowList;
    }
    // $ANTLR end "flow_stmts"


    // $ANTLR start "flow_not_list"
    // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:145:1: flow_not_list returns [List<FlowStmt> flowList] : ( ALIAS_NOT '(' f= flow_not_stmt ( ',' fOpt= flow_not_stmt )* ')' | f= flow_stmt | p= pure_stmt );
    public final List<FlowStmt> flow_not_list() throws RecognitionException {
        List<FlowStmt> flowList = null;

        ExplicitFlowStmt f = null;

        ExplicitFlowStmt fOpt = null;

        PureStmt p = null;


        try {
            // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:146:2: ( ALIAS_NOT '(' f= flow_not_stmt ( ',' fOpt= flow_not_stmt )* ')' | f= flow_stmt | p= pure_stmt )
            int alt10=3;
            switch ( input.LA(1) ) {
            case ALIAS_NOT:
                {
                alt10=1;
                }
                break;
            case WILDCARD:
            case IDENT:
            case 19:
                {
                alt10=2;
                }
                break;
            case 27:
                {
                alt10=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 10, 0, input);

                throw nvae;
            }

            switch (alt10) {
                case 1 :
                    // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:146:4: ALIAS_NOT '(' f= flow_not_stmt ( ',' fOpt= flow_not_stmt )* ')'
                    {
                     flowList = new LinkedList<FlowStmt>(); 
                    match(input,ALIAS_NOT,FOLLOW_ALIAS_NOT_in_flow_not_list333); 
                    match(input,19,FOLLOW_19_in_flow_not_list335); 
                    pushFollow(FOLLOW_flow_not_stmt_in_flow_not_list339);
                    f=flow_not_stmt();

                    state._fsp--;

                     f.negateNoFlow(); flowList.add(f); 
                    // /Users/jgf/Documents/Projects/joana/wala/joana.wala.flowless/src/edu/kit/joana/wala/flowless/spec/FlowLess.g:148:7: ( ',' fOpt= flow_not_stmt )*
                    loop9:
                    do {
                        int alt9=2;
                        int LA9_0 = input.LA(1);
